fix(web/ui): Fix overflow of topology sidebar
This change fixes an issue with the web interface where the sidebar
would overflow due to the large number of rack slots that are displayed
in the sidebar.

--- a/opendc-web/opendc-web-ui/src/components/topologies/sidebar/rack/RackSidebar.module.scss
+++ b/opendc-web/opendc-web-ui/src/components/topologies/sidebar/rack/RackSidebar.module.scss
@@ -1,12 +1,14 @@
 .sidebarContainer {
     display: flex;
-    height: 100%;
-    max-height: 100%;
     flex-direction: column;
+
+    height: 100%;
 }
 
 .machineListContainer {
-    flex: 1;
-    overflow-y: scroll;
+    overflow-y: auto;
+
+    flex: 1 0 300px;
+
     margin-top: 10px;
 }
