--- a/opendc-web/opendc-web-ui/src/style/index.scss
+++ b/opendc-web/opendc-web-ui/src/style/index.scss
@@ -22,15 +22,7 @@
 
 body,
 #__next {
-    margin: 0;
-    padding: 0;
-    width: 100%;
     height: 100%;
 
     background: #eee;
-}
-
-.full-height {
-    position: relative;
-    height: 100% !important;
 }
